--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build && npm run gh-pages:404",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "gh-pages:404": "cp build/index.html build/404.html"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
